tests/res/traits/error_gives_verify.say
// A delegate that does not provide the trait fails construction (verified at the end of `init`).
trait Powered { pub fn start()! { return "vroom"; } }

type Car {
    engine gives Powered;
    init() { this.engine = 5; } // error: Uncaught exception: "Delegate field 'engine' does not provide trait 'Powered'"
}

say c = Car();
